--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "mongoose": "^8.9.5",
+    "next": "^15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
