Impliement a fetch handler

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
+    "lucide-react": "^0.474.0",
     "mongoose": "^8.9.5",
     "next": "^15.1.6",
     "next-auth": "^5.0.0-beta.25",
